# sosu-seisei

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  gitcommand-memo.txt  settings.txt
sosu-seisei/: Cargo.toml  settings.txt
sosu-seisei/src/: main.rs
src/: app.rs  config.rs  lib.rs  main.rs  miller_rabin.rs  sieve.rs  verification.rs
